--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   get: ^4.6.5
+  url_launcher: ^6.1.10
 #  get_storage: ^2.1.1
 #  flutter_native_splash: ^2.2.19
 #  liquid_swipe: ^3.1.0
